[Fix] useLayoutEffect 수정 및 z-index 적용

--- a/components/Nav/Nav.module.scss
+++ b/components/Nav/Nav.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   background-color: transparent;
   transition: all 0.5s ease-in-out;
+  z-index: 9999;
   .navContainer {
     width: 100%;
     display: flex;
